app/javascript/styles/_page_admin_dropdown.scss
@use 'sass:math';

.page-admin-dropdown {
  margin-bottom: 4px;
  float: right;

  @media (min-width: #{breakpoint-min(lg, $grid-breakpoints) + 65px}) and (max-width: #{breakpoint-max(lg, $grid-breakpoints)}) {
    position: absolute;
    margin-left: calc(#{map-get($container-max-widths, xl)} - #{math.div($grid-gutter-width, 2)});
    float: none;
  }

  @media (min-width: #{breakpoint-min(xl, $grid-breakpoints) + 65px}) {
    position: absolute;
    margin-left: calc(#{map-get($container-max-widths, xxl)} - #{math.div($grid-gutter-width, 2)});
    float: none;
  }
}

